# UI

./: main.cpp
Laba4/: main.cpp  main1.cpp
contr/: CMakeLists.txt  main.cpp
lab1/: main.cpp  task  titul.docx
lab2/: main.cpp  task
lab3/: CMakeLists.txt  main.cpp  main.h  task
lab3/source/SigmaMain/: SigmaMain.aps  SigmaMain.cpp  SigmaMain.dsp  SigmaMain.dsw  SigmaMain.h  SigmaMain.opt  SigmaMain.plg  SigmaMain.rc  SystemInfo.cpp  SystemInfo.h  SystemInfoData.cpp  SystemInfoData.h  SystemInfoView.cpp  SystemInfoView.h  resource.h
lab3/source/includes/: SigmaCommon.h  SigmaDefines.h
lab3_1/: main.cpp
lab4/: MyDll.cpp  MyDll.h
lab5/: CMakeLists.txt  DbHandler.cpp  DbHandler.h  StateHandler.cpp  StateHandler.h  enums.h  main.cpp  main.h
lab5/db/: scheme.mwb
lab6/: CMakeLists.txt  DbHandler.cpp  DbHandler.h  StateHandler.cpp  StateHandler.h  enums.h  main.cpp  main.h
lab7/: CMakeLists.txt  Enums.h  StateHandler.cpp  StateHandler.h  main.cpp  main.h  otchet.docx
lab8/: CMakeLists.txt  lab8.docx  main.cpp
